# dotlambda

./: .gitmodules  CMakeLists.txt  README.md  file.scm  main.cpp
scripts/: build.sh  docs.sh  install-chibi.sh  install-raylib.sh
src/: main.cpp
src/lib/: element.h  math.h  rscript.cpp  rscript.h  scene.h  test.cpp  test.h
